--- a/assets/css/extended/custom.css
+++ b/assets/css/extended/custom.css
@@ -49,9 +49,19 @@
 .entry-thumbnail img {
   border-radius: var(--radius);
   pointer-events: none;
-  width: 200px;
-  height: auto;
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+  margin: 0px; 
 }
+
+/* Media query for mobile devices */
+@media screen and (max-width: 767px) {
+  .entry-thumbnail img {
+    height: auto; /* Use 'auto' to maintain the aspect ratio based on the width */
+  }
+}
+
 .entry-cover a {
   color: var(--secondary);
   box-shadow: 0 1px 0 var(--primary);
