--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -57,7 +57,7 @@
 
 <article class="{{ $class }}">
   <div style="display: flex; align-items: center; justify-content: center;">
-    <div style="flex: 1; display: flex; align-items: center; justify-content: center;">
+    <div style="flex: 1; display: flex; align-items: center; justify-content: center; margin-right: 20px;">
       {{- $isHidden := (site.Params.cover.hidden | default site.Params.cover.hiddenInList) }}
       {{- partial "thumbnail.html" (dict "cxt" . "IsHome" true "isHidden" $isHidden) }}
     </div>
@@ -82,6 +82,7 @@
     </div>
   </div>
 </article>
+
 {{- end }}
 
 <!-- ... -->
